# a-ok

./: .gitignore  README.md  index.html  pyproject.toml
docs/: architecture.md  dashboard.md  integration-phase2.md  intent-and-prd-orphan-dedup.md  operations.md
docs/plans/: 2026-05-20-heartbeat-db-status-mismatch.md
scripts/: send_dashboard_snapshot.py  worker_control_dashboard_service.py
tests/: conftest.py  fixtures_legacy_sample.json  test_aok_spawn.py  test_autostart.py  test_dashboard.py  test_db.py  test_dispatch_hsid.py  test_dispatch_preflight.py  test_display_status.py  test_heartbeat_classify_parity.py  test_heartbeat_mention_id.py  test_heartbeat_slack_hide.py  test_legacy_parity_ingest.py  test_legacy_parity_parser.py  test_legacy_parity_schema.py  test_legacy_sessions_deprecation.py  test_list_sessions_dedup.py  test_mention_id_migration.py  test_mention_id_render.py  test_mention_id_schema.py  test_native_sessions.py  test_paths.py  test_run_end_abandoned.py  test_runtime_argv.py  test_scanner.py  test_server.py  test_session_sync.py  test_session_sync_all.py  test_session_view.py  test_session_view_heartbeat_bucket.py  test_sessions_policy.py  test_snapshot.py  test_spawn_backfill.py  test_transcript_endpoint.py
worker_control/: __init__.py  __main__.py  autostart.py  cli.py  dashboard.py  db.py  hermes_install.py  hermes_ledger.py  hermes_profiles.py  hermes_session_sync.py  native_sessions.py  paths.py  profiles.py  projects.py  runtime.py  scanner.py  server.py  session_sync.py  session_view.py  sessions.py  snapshot.py  transcript.py
worker_control/static/: dashboard.html
worker_control_hermes/: __init__.py  aok_spawn.py  build_report.py  heartbeat.py  hermes_projects_view.sql  legacy_parity_cli.py  legacy_parity_ingest.py  legacy_parity_parser.py  legacy_parity_report.py  legacy_parity_schema.py  migrate_to_canonical_db.py  projects.py  spawn_backfill.py  subprocs.py
worker_control_hermes/migrations/: _2026_split_claude_parity.py  __init__.py
