[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-control"
version = "0.1.0"
description = "Local Claude Code worker-control: profiles, projects, sessions over SQLite."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "whyjp" }]
keywords = ["claude-code", "worker", "orchestration", "tmux", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
]
dependencies = [
    "psutil>=5.9",   # subprocs.py 가 claude-code 워크로드 디스커버리에 사용
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
workerctl                   = "worker_control.cli:main"
workerctl-hermes-projects   = "worker_control_hermes.projects:main"
workerctl-hermes-heartbeat  = "worker_control_hermes.heartbeat:main"
workerctl-hermes-report     = "worker_control_hermes.build_report:main"
workerctl-hermes-subprocs   = "worker_control_hermes.subprocs:main"
workerctl-hermes-migrate    = "worker_control_hermes.migrate_to_canonical_db:main"
workerctl-hermes-report-legacy = "worker_control_hermes.legacy_parity_report:main"
workerctl-hermes-parity-ingest = "worker_control_hermes.legacy_parity_cli:ingest_cmd"

[tool.setuptools]
packages = ["worker_control", "worker_control_hermes"]

[tool.setuptools.package-data]
worker_control         = ["py.typed", "static/*.html"]
worker_control_hermes  = ["*.sql"]
